--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
   /*font-size: 1rem;*/
+  overflow-x: hidden;
 }
 
 #root {
