--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,13 @@ body {
 }
 
 .category {
-	margin-top: 15px;
-	margin-bottom: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	background-color: #f8f9fa30;
 	border-radius: 5px;
+	min-height: 
 }
 
 .category:hover {
